ensure mobile header fits on small screens (iPhone 5/SE)

--- a/theme/assets/css/src/_header.scss
+++ b/theme/assets/css/src/_header.scss
@@ -78,7 +78,7 @@ header {
 		@include breakpoint(phone) {
 			max-width: 100%;
 			display: grid;
-			grid-template-columns: 80px 250px 1fr;
+			grid-template-columns: 80px 3fr 1fr;
 		}
 	}
 
